--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div class="container">
  <h1>First launch</h1>
+ <div class="block_pav">
+     <div class="circle_pav">
+         
+     </div>
+ </div>
 
 
     </div>
