--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Firstlaunch</title>
 </head>
+
 <body>
     <div class="container">
- <h1>First launch</h1>
- <div class="block_pav">
-     <div class="circle_pav">
-         
-     </div>
- </div>
-
-
+        <h1>First launch</h1>
+        <div class="block_pav">
+            <div class="circle_pav"> </div>
+        </div>
+        <div class="block_dron_aaa">
+            <div class="flex_aaa box_aaa1"><div class="round_aaa"><div class="flawer_aaa"></div></div></div>
+            <div class="flex_aaa box_aaa2"><div class="round_aaa"><div class="flawer_aaa"></div></div></div>
+            <div class="flex_aaa box_aaa3"><div class="round_aaa"><div class="flawer_aaa"></div></div></div>
+            <div class="flex_aaa box_aaa4"><div class="round_aaa"><div class="flawer_aaa"></div></div></div>
+        </div>
     </div>
-    
 </body>
+
 </html>
