подбросил специи в кашу

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <title>Firstlaunch</title>
 </head>
+
 <body>
     <div class="container">
- <h1>First launch</h1>
- <div class="block_pav">
-     <div class="circle_pav">
-         
-     </div>
- </div>
+        <h1>First launch</h1>
+        <div class="block_pav">
+            <div class="circle_pav">
 
+            </div>
+        </div>
+
+        <div class="block-rom">
+            <a href="img/coffee.jpg" target="_blank"><img class="coffee-rom" src="img/coffee.jpg" alt="kofe" width="200" height="200"></a>
+        </div>
 
     </div>
-    
+
 </body>
+
 </html>
