поменял свой id

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
         </div>
 
-        <div class="block-rom">
-            <a href="img/coffee.jpg" target="_blank"><img class="coffee-rom" src="img/coffee.jpg" alt="kofe" width="200" height="200"></a>
+        <div class="block-rrr">
+            <a href="img/coffee.jpg" target="_blank"><img class="coffee-rrr" src="img/coffee.jpg" alt="kofe" width="200" height="200"></a>
         </div>
 
     </div>
