добавление блока html+css и папки с картинкой img

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
          
      </div>
  </div>
-
-
-    </div>
-    
+<div class="block_isa">
+    <img src="img/sdelau.jpg" alt="ok"/>
+</div>
+    </div>    
 </body>
 </html>
